--- a/webui/index.html
+++ b/webui/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESP32 Touch Sensor Logger</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -46,44 +48,50 @@
                 <div class="touch-sensor" id="touch-1">
                     <div class="sensor-icon">👆</div>
                     <h3>Touch 1</h3>
-                    <p>GPIO 4</p>
+                    <p>GPIO 2</p>
                     <div class="touch-indicator" id="indicator-1"></div>
                 </div>
                 <div class="touch-sensor" id="touch-2">
                     <div class="sensor-icon">👆</div>
                     <h3>Touch 2</h3>
-                    <p>GPIO 5</p>
+                    <p>GPIO 3</p>
                     <div class="touch-indicator" id="indicator-2"></div>
                 </div>
                 <div class="touch-sensor" id="touch-3">
                     <div class="sensor-icon">👆</div>
                     <h3>Touch 3</h3>
-                    <p>GPIO 6</p>
+                    <p>GPIO 4</p>
                     <div class="touch-indicator" id="indicator-3"></div>
                 </div>
                 <div class="touch-sensor" id="touch-4">
                     <div class="sensor-icon">👆</div>
                     <h3>Touch 4</h3>
-                    <p>GPIO 7</p>
+                    <p>GPIO 5</p>
                     <div class="touch-indicator" id="indicator-4"></div>
                 </div>
                 <div class="touch-sensor" id="touch-5">
                     <div class="sensor-icon">👆</div>
                     <h3>Touch 5</h3>
-                    <p>GPIO 8</p>
+                    <p>GPIO 6</p>
                     <div class="touch-indicator" id="indicator-5"></div>
                 </div>
                 <div class="touch-sensor" id="touch-6">
                     <div class="sensor-icon">👆</div>
                     <h3>Touch 6</h3>
-                    <p>GPIO 9</p>
+                    <p>GPIO 7</p>
                     <div class="touch-indicator" id="indicator-6"></div>
                 </div>
                 <div class="touch-sensor" id="touch-7">
                     <div class="sensor-icon">👆</div>
                     <h3>Touch 7</h3>
-                    <p>GPIO 10</p>
+                    <p>GPIO 14</p>
                     <div class="touch-indicator" id="indicator-7"></div>
+                </div>
+                <div class="touch-sensor" id="touch-8">
+                    <div class="sensor-icon">👆</div>
+                    <h3>Touch 8</h3>
+                    <p>GPIO 15</p>
+                    <div class="touch-indicator" id="indicator-8"></div>
                 </div>
             </div>
         </div>
@@ -121,4 +129,5 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
